fix button align

--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -9,7 +9,7 @@ input {
 }
 
 .ms-Button-textContainer {
-    text-align: center;
+    text-align: center !important;
 }
 
 .center {
